[scheduler] Actually sample scheduler tasks in UKM

The actual call to sampling code was missing. Fix it.

R=fmeawad@chromium.org
BUG=835921

Change-Id: I6ecdfe078f5884d37975174c1ba696dcc7e2bbaf
Reviewed-on: https://chromium-review.googlesource.com/1024412
Commit-Queue: Alexander Timin <altimin@chromium.org>
Reviewed-by: Fadi Meawad <fmeawad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553015}
Former-commit-id: fd62e47f90cb35fb2ce8fa0313aa9a6b4da2dad2